--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
     <h1 class="brands_title">Naty Marin Presents</h1>
     <p class="brands_subtitle">
-      Experiencias y metodologías aliadas que expanden nuestra visión de bienestar integral.
+      Experiencias y metodologías que expanden tu bienestar exponencial.
     </p>
 
     <div class="brands_grid">
