--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
   <!-- Menú superior -->
   <nav class="top_nav">
     <ul>
-      <li><a href="#el-metodo">FitRoom</a></li>
-      <li><a href="#la-experiencia">Movimiento</a></li>
-      <li><a href="#PQRs">Consultorias</a></li>
-      <li><a href="#reservas">Marcas</a></li>
+      <li><a href="#el-metodo">Naty Marin</a></li>
+      <li><a href="#la-experiencia">FitRoom</a></li>
+      <li><a href="#PQRs">Quantum 7D</a></li>
+      <li><a href="#reservas">Contacto</a></li>
     </ul>
   </nav>
 
@@ -223,14 +223,15 @@
 
 
 
+<div class="choose_section layout_padding" id="PQRs">
+  <div class="container">
+  <h1 class="choose_taital">Reglamento de Acceso:</h1>
 
-   <!-- choose section start -->
-   <div class="choose_section layout_padding" id="PQRs">
-      <div class="container">
-         <h1 class="choose_taital">Reglamento de Acceso:</h1>
-         <section class="acordeones-container">
+  <div class="reglamento_grid">
 
-  <!-- Acordeón 1 -->
+    <!-- COLUMNA IZQUIERDA -->
+    <section class="acordeones-container">
+          <!-- Acordeón 1 -->
   <div class="acordeon">
     <button class="acordeon-header">1. Unificación del Cuerpo (Salud y Seguridad)</button>
     <div class="acordeon-content">
@@ -262,6 +263,16 @@
     </div>
   </div>
 </section>
+
+    <!-- COLUMNA DERECHA -->
+    <div class="reglamento_video_box">
+      <video autoplay muted loop playsinline>
+        <source src="videos/video 2.mp4" type="video/mp4">
+      </video>
+    </div>
+
+  </div>
+</div>
 
 <style>
   .acordeones-container {
@@ -320,10 +331,16 @@
   });
 </script>
 
-         <div class="read_bt_1"><a href="https://wa.me/+573105265879"><img src="images/ws-icon.png">Escribenos</a></div>
 
-      </div>
-   </div>
+    <div class="read_bt_1">
+      <a href="https://wa.me/+573105265879">
+        <img src="images/ws-icon.png">Escríbenos
+      </a>
+    </div>
+
+  </div>
+</div>
+  
    <!-- choose section end -->
    
    <!-- client section start -->
