--- a/index.html
+++ b/index.html
@@ -111,6 +111,50 @@
 
 <!-- banner section end -->
 
+<section class="naty_section" id="naty-marin">
+
+  <div class="container">
+
+    <div class="naty_grid">
+
+      <!-- TEXTO -->
+      <div class="naty_text">
+        <h2 class="naty_title">Naty Marin</h2>
+
+        <p class="naty_paragraph">
+          Fundadora, mentora y creadora de metodologías de movimiento consciente.
+          Con más de una década de experiencia, Naty Marin integra ciencia,
+          sensibilidad corporal y visión estratégica para transformar la relación
+          entre el cuerpo, la mente y el bienestar.
+        </p>
+
+        <p class="naty_paragraph soft">
+          Su trabajo va más allá del ejercicio: es una guía personalizada hacia
+          procesos de salud sostenibles, elegantes y profundamente humanos.
+        </p>
+      </div>
+
+      <!-- LOGO -->
+      <div class="naty_logo">
+        <img src="images/logo.png" alt="Naty Marin">
+      </div>
+
+    </div>
+
+    <!-- CONSULTORÍA -->
+    <div class="naty_consultoria">
+      <p>
+        ¿Buscas un acompañamiento más profundo y personalizado?
+      </p>
+      <a href="#contacto" class="naty_cta">
+        Conocer la Consultoría Personal
+      </a>
+    </div>
+
+  </div>
+
+</section>
+
 
 
 
