--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
 
       <!-- TEXTO -->
       <div class="naty_text">
-        <h2 class="naty_title">Naty Marin</h2>
+
+        <!-- TÍTULO COMO IMAGEN -->
+        <img 
+          src="images/natymarin.png" 
+          alt="Naty Marin"
+          class="naty_title_img"
+        >
 
         <p class="naty_paragraph">
           Fundadora, mentora y creadora de metodologías de movimiento consciente.
@@ -101,9 +107,9 @@
         </p>
       </div>
 
-      <!-- LOGO -->
+      <!-- IMAGEN DERECHA -->
       <div class="naty_logo">
-        <img src="images/sign.png" alt="Naty Marin">
+        <img src="images/naty.png" alt="Naty Marin">
       </div>
 
     </div>
