--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- Menú superior -->
   <nav class="top_nav">
     <ul>
-      <li><a href="#naty-marin">Naty Marin</a></li>
+      <li><a href="#naty-marin">Naty Marín</a></li>
       <li><a href="#el-metodo">FitRoom</a></li>
       <li><a href="#marcas">Quantum 7D</a></li>
       <li><a href="#contact">Contacto</a></li>
@@ -217,11 +217,11 @@
       <div class="exp_bloque">
         <img src="images/img-1.png" alt="Recuperación Celular (Infrarrojo)" class="exp_img">
         <button class="exp_boton">
-          Personalizado VIP
+          Hiper-Personalización VIP (One-to-One) / acondicionamiento
           <span class="flecha"></span>
         </button>
         <div class="exp_contenido">
-          <p>El Lujo de la Regeneración: Active las Proteínas de Choque Térmico (HSPs). Esto no es solo recuperarse, es acelerar la reparación a nivel molecular. Deje el agotamiento atrás y asegure su vitalidad constante, lista para el próximo desafío.</p>
+          <p>Este es nuestro servicio élite, reservado para quienes exigen la excelencia en su rendimiento. Tus sesiones privadas se desarrollan en un ambiente de discreción y concentración inigualable. Utilizamos data biométrica avanzada para diseñar tu código biológico individualizado, enfocándonos en la prevención activa y el bienestar, pilares clave para una longevidad funcional. Más de 20 años de experiencia avalan la precisión de la técnica Naty Marín.</p>
         </div>
       </div>
 
@@ -229,11 +229,11 @@
       <div class="exp_bloque">
         <img src="images/img-2.png" alt="Fuerza y Estructura (Física)" class="exp_img">
         <button class="exp_boton">
-          Personalizado Group
+          Personal Group Select / acondicionamiento
           <span class="flecha"></span>
         </button>
         <div class="exp_contenido">
-          <p>Posea una Estructura Inquebrantable: La verdadera fortaleza se construye desde la Alineación Postural. Obtenga la Resistencia y el Tono que su estilo de vida exige, garantizando la durabilidad y la elegancia en cada movimiento. Su cuerpo, su activo más valioso.</p>
+          <p>Comparte el rigor y la precisión de la Codificación Funcional en un entorno reducido y exclusivo. Aunque entrenes en comunidad, tu plan sigue siendo 100% único y exclusivo, diseñado bajo la técnica y precisión Naty Marín. Todo nuestro enfoque se centra en el cuidado, bienestar y prevención para una vida con longevidad funcional.</p>
         </div>
       </div>
 
@@ -241,25 +241,25 @@
       <div class="exp_bloque">
         <img src="images/img-3.png" alt="Neuro-Regulación y Enfoque" class="exp_img">
         <button class="exp_boton">
-          Rehabilitacion
+          Therapeutic Hiper-Personalización VIP (One-to-One) | TERAPIA
           <span class="flecha"></span>
         </button>
         <div class="exp_contenido">
-          <p>El Control es el Nuevo Lujo: Reduzca el cortisol y equilibre su Sistema Nervioso Parasimpático en el ambiente más sereno. Obtenga una claridad mental y un enfoque que trasciende la sala de yoga. La inversión más directa en su capacidad de decisión.</p>
+          <p>Un servicio de potencialización corporal y terapia reservado para un número limitado de clientes. Cada sesión se imparte en un espacio de total discreción y bienestar. Nuestro proceso se basa en un rigor terapéutico excepcional, garantizando que tu enfoque es 100% funcional. Aquí, el objetivo es la reestructuración mecánica completa para salir o prevenir una lesión futura. La precisión de la técnica Naty Marín, enfocada en la Codificación Funcional, asegura resultados permanentes y el retorno al movimiento sin dolor.</p>
         </div>
       </div>
 
       <!-- Bloque 4 -->
- <!--      <div class="exp_bloque">
+      <div class="exp_bloque">
         <img src="images/img-4.png" alt="Conciencia e Integración (Mente)" class="exp_img">
         <button class="exp_boton">
-          Conciencia e Integración (Mente)
+          RH Terapéutico Group | TERAPIA
           <span class="flecha"></span>
         </button>
         <div class="exp_contenido">
-          <p>La Fusión Interior: Conecte con la Unificación Interior que los líderes buscan. En Quantum 7D, la conciencia no es un ejercicio, es el poder para alinear sus metas y sus acciones. Su centro, su ventaja innegable.</p>
+          <p>Enfócate en la rehabilitación, potencialización y Codificación Funcional del movimiento en un ambiente de serenidad. Trabajamos con el máximo cuidado y rigor experto. Priorizamos la reestructuración mecánica para superar lesiones y mejorar la funcionalidad. Nos distinguimos claramente del entrenamiento puramente fitness o estético. La visión Naty Marín te guía.</p>
         </div>
-      </div> -->
+      </div>
 
       <!-- Bloque 5 -->
 <!--       <div class="exp_bloque">
@@ -323,7 +323,7 @@
 <section class="brands_section" id="marcas">
   <div class="container">
 
-    <h1 class="brands_title">Naty Marin Presents</h1>
+    <h1 class="brands_title">Naty Marín Presents</h1>
     <p class="brands_subtitle">
       Experiencias y metodologías que expanden tu bienestar exponencial.
     </p>
