--- a/index.html
+++ b/index.html
@@ -87,37 +87,88 @@
       <!-- TEXTO -->
       <div class="naty_text">
 
-        <!-- TÍTULO COMO IMAGEN -->
+        <!-- EYEBROW -->
+        <span class="naty_eyebrow">
+          CONOCE A LA VISIONARIA
+        </span>
+
+        <!-- NOMBRE COMO IMAGEN -->
         <img 
           src="images/natymarin.png" 
-          alt="Naty Marin"
+          alt="Natalia Marín Sánchez"
           class="naty_title_img"
         >
 
+        <!-- SUBTÍTULO -->
+        <h3 class="naty_subtitle">
+          Natalia Marín Sánchez: Más de Dos Décadas Codificando la Excelencia Humana
+        </h3>
+
+        <!-- DESCRIPCIÓN PRINCIPAL -->
         <p class="naty_paragraph">
-          Fundadora, mentora y creadora de metodologías de movimiento consciente.
-          Con más de una década de experiencia, Naty Marin integra ciencia,
-          sensibilidad corporal y visión estratégica para transformar la relación
-          entre el cuerpo, la mente y el bienestar.
+          Natalia Marín Sánchez (conocida profesionalmente como Naty Marín) es la
+          Fisioterapeuta y Neurocientífica que lidera la vanguardia en el bienestar.
+          Arquitecta de la forma y mente maestra detrás de la Codificación Funcional
+          que define a <strong>Naty Marin Wellbeing Concept</strong>.
         </p>
 
-        <p class="naty_paragraph soft">
-          Su trabajo va más allá del ejercicio: es una guía personalizada hacia
-          procesos de salud sostenibles, elegantes y profundamente humanos.
+        <p class="naty_paragraph">
+          Respaldada por más de 20 años de experiencia en programas de
+          hiper-personalización y mejora de la funcionalidad motora, su trabajo se
+          fundamenta en investigación, evidencia científica y resultados sostenibles.
         </p>
+
+        <!-- PILARES -->
+        <div class="naty_pillars">
+          <p>• <strong>Biomecánica Funcional:</strong> el movimiento como ingeniería.</p>
+          <p>• <strong>Terapia de Reestructuración Avanzada:</strong> corrección y reprogramación de patrones.</p>
+          <p>• <strong>Respuesta Neuromuscular Humana:</strong> precisión entre cerebro y músculo.</p>
+        </div>
+
+        <!-- TEXTO DE MÉTODO -->
+        <p class="naty_paragraph soft">
+          Este enfoque dio vida al <strong>Método Naty Marín</strong>: una metodología
+          exclusiva donde cada movimiento, sesión y plan se diseña con un algoritmo
+          biológico avanzado, proyectado hacia el 2026.
+        </p>
+
+        <!-- FILOSOFÍA -->
+        <div class="naty_quotes">
+          <blockquote>
+            “La precisión no es un lujo; es el único camino hacia el bienestar exponencial
+            y la mejora de la funcionalidad motora.”
+          </blockquote>
+
+          <blockquote>
+            “No adivinamos. Evaluamos, codificamos y calibramos. Cada decisión está
+            respaldada por la comprensión profunda de su biología única.”
+          </blockquote>
+        </div>
+
+        <!-- COMPROMISO -->
+        <p class="naty_paragraph commitment">
+          Elegir un servicio con la firma de Natalia Marín Sánchez es comprometerse con
+          un proceso donde la seguridad, la sostenibilidad y la excelencia no son
+          negociables.
+        </p>
+
       </div>
 
       <!-- IMAGEN DERECHA -->
-      <div class="naty_logo">
-        <img src="images/naty.png" alt="Naty Marin">
+      <div class="naty_image">
+        <img 
+          src="images/naty.png" 
+          alt="Natalia Marín"
+          class="naty_photo"
+        >
       </div>
 
     </div>
 
-    <!-- CONSULTORÍA -->
+    <!-- CTA -->
     <div class="naty_consultoria">
       <p>
-        ¿Buscas un acompañamiento más profundo y personalizado?
+        ¿Buscas un acompañamiento profundo, preciso y verdaderamente personalizado?
       </p>
       <a href="#contacto" class="naty_cta">
         Conocer la Consultoría Personal
