--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <nav class="top_nav">
     <ul>
       <li><a href="#naty-marin">Naty Marín</a></li>
-      <li><a href="#la-experiencia">Servicios</a></li>
+      <!-- <li><a href="#la-experiencia">Servicios</a></li> -->
       <li><a href="#marcas">Quantum 7D</a></li>
-      <li><a href="#contact">Contacto</a></li>
+      <li><a href="#contact">Información</a></li>
     </ul>
   </nav>
 
