--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
 <section class="brands_section" id="marcas">
   <div class="container brands_hero">
 
-    <span class="brands_tag">NEW BRAND LAUNCH</span>
+    <!-- <span class="brands_tag">NEW BRAND LAUNCH</span> -->
 
     <h1 class="brands_title">
-      Naty Marín presents
+      Naty Marín presents a new brand
     </h1>
 
     <p class="brands_subtitle">
@@ -383,7 +383,7 @@
         alt="Quantum 7D"
         class="brand_logo"
       >
-      <span class="brand_cta">Enter the experience</span>
+      <span class="brand_cta">Click aquí y vive la experiencia</span>
     </a>
 
   </div>
