--- a/index.html
+++ b/index.html
@@ -159,7 +159,12 @@
   <!-- CTA -->
   <div class="naty_cta_block">
     <p>¿Buscas un acompañamiento profundo, preciso y verdaderamente personalizado?</p>
-    <a href="#contacto">Conocer la Consultoría Personal</a>
+    <!-- <a href="#contacto">Conocer la Consultoría Personal</a> -->
+    <div class="read_bt_1">
+      <a href="https://wa.me/+573105265879">
+        <img src="images/ws-icon.png">Solicitar asesoría
+      </a>
+    </div> 
   </div>
 
 </section>
