--- a/index.html
+++ b/index.html
@@ -395,36 +395,54 @@
 </section>
 
 
+<section class="contact_section" id="contacto">
 
+  <div class="container contact_grid">
 
+    <!-- MAPA -->
+    <div class="contact_map">
+      <iframe 
+        src="https://www.google.com/maps?q=Naty+Marin&output=embed"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
 
+    <!-- INFO CONTACTO -->
+    <div class="contact_info">
 
-   
-     
-   <!-- footer section start -->
-   <div class="footer_section layout_padding" id="contact">
-      <div class="container">
-         <div class="input_btn_main">
-            <input type="text" class="mail_text" placeholder="Naty Marin News" name="Enter your email">
-            <div class="subscribe_bt"><a href="#">Subscribete</a></div>
-         </div>
-         <div class="location_main">
-            <div class="call_text"><img src="images/call-icon.png"></div>
-            <div class="call_text"><a href="#">Call +57 310 5265879</a></div>
-            <div class="call_text"><img src="images/mail-icon.png"></div>
-            <div class="call_text"><a href="#">fitroom@natymarin.com</a></div>
-         </div>
-         <div class="social_icon">
-            <ul>
-               <li><a href="#"><img src="images/fb-icon.png"></a></li>
-               <!-- <li><a href="#"><img src="images/twitter-icon.png"></a></li> -->
-               <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-               <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-            </ul>
-         </div>
+      <h2 class="contact_title">Contacto</h2>
+
+      <!-- WhatsApp -->
+      <a 
+        href="https://wa.me/573105265879" 
+        target="_blank"
+        class="contact_whatsapp">
+        <span>Escríbenos por WhatsApp</span>
+      </a>
+
+      <!-- Datos -->
+      <div class="contact_details">
+        <p>📞 +57 310 526 5879</p>
+        <p>✉️ fitroom@natymarin.com</p>
       </div>
-   </div>
-   <!-- footer section end -->
+
+      <!-- Redes -->
+      <div class="contact_social">
+        <a href="#" target="_blank">
+          <img src="images/instagram-icon.png" alt="Instagram">
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/linkedin-icon.png" alt="LinkedIn">
+        </a>
+      </div>
+
+    </div>
+
+  </div>
+
+</section>
+
    <!-- copyright section start -->
    <div class="copyright_section">
       <div class="container">
