--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
    <!-- fonts -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
    <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Righteous&display=swap" rel="stylesheet"> -->
  <!--   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
@@ -416,9 +417,10 @@
       <!-- WhatsApp -->
       <a 
         href="https://wa.me/573105265879" 
+        class="whatsapp_btn"
         target="_blank"
-        class="contact_whatsapp">
-        <span>Escríbenos por WhatsApp</span>
+      >
+        Escríbenos por WhatsApp
       </a>
 
       <!-- Datos -->
@@ -428,14 +430,15 @@
       </div>
 
       <!-- Redes -->
-      <div class="contact_social">
-        <a href="#" target="_blank">
-          <img src="images/instagram-icon.png" alt="Instagram">
+      <div class="contact_socials">
+        <a href="https://www.instagram.com/tuperfil" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
         </a>
-        <a href="#" target="_blank">
-          <img src="images/linkedin-icon.png" alt="LinkedIn">
+        <a href="https://www.linkedin.com/company/tuperfil" target="_blank" aria-label="LinkedIn">
+          <i class="fab fa-linkedin-in"></i>
         </a>
       </div>
+
 
     </div>
 
