--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <li><a href="#naty-marin">Naty Marín</a></li>
       <!-- <li><a href="#la-experiencia">Servicios</a></li> -->
       <li><a href="#marcas">Quantum 7D</a></li>
-      <li><a href="#contact">Información</a></li>
+      <li><a href="#contacto">Información</a></li>
     </ul>
   </nav>
 
@@ -365,7 +365,7 @@
 
 
 <!-- Quantum 7D -->
-<section class="quantum-launch">
+<section class="quantum-launch" id="marcas">
 
   <!-- Logo Naty Marin arriba, discreto -->
   <div class="nm-logo">
@@ -411,7 +411,7 @@
     </div>
 
     <!-- INFO CONTACTO -->
-    <div class="contact_info">
+    <div class="contact_info" id="contacto">
 
       <h2 class="contact_title">Contacto</h2>
 
